--- a/index.html
+++ b/index.html
@@ -249,6 +249,13 @@
         <img src="https://files.catbox.moe/cxfrea.jpg" alt="Kegiatan 4">
       </div>
     </div>
+            <!-- Button Link Besar -->
+<div class="button-wrapper">
+  <a href="https://gallery-class-f3.vercel.app/" target="_blank" class="big-btn">
+    Galery XI F3
+  </a>
+</div>
+  </section>
   </section>
 
   <!-- Developer -->
