--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <p>Bendahara 1</p>
           </div>
           <div class="card">
-            <img src="https://files.catbox.moe/l6rtwi.jpg" alt="Bendahara 2">
+            <img src="https://files.catbox.moe/f5fpg5.jpg" alt="Bendahara 2">
             <h3>Siti Fadila</h3>
             <p>Bendahara 2</p>
           </div>
